6731641: assert(m->adr_type() == mach->adr_type(),"matcher should not change adr type")

Fixed few addP node type and narrow oop type problems.

Reviewed-by: rasbold, never